# ember

./: .gitignore  01-vision.md  CMakeLists.txt  CMakePresets.json
editor/: CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Commands.cpp  Commands.h  EditorApplication.cpp  EditorApplication.h  EditorContext.h  EditorInspectors.cpp  EditorInspectors.h  EditorSettings.cpp  EditorSettings.h  FileBrowser.cpp  FileBrowser.h  GizmoMath.h  ImGuiInspectVisitor.h  ImGuiLayer.cpp  ImGuiLayer.h  InspectorRegistry.cpp  InspectorRegistry.h  Picking.cpp  Picking.h  PlayModeController.cpp  PlayModeController.h  SceneOps.cpp  SceneOps.h  Selection.h  TilemapPaint.h  main.cpp
editor/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  EditorSettingsPanel.cpp  EditorSettingsPanel.h  InspectorPanel.cpp  InspectorPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TilemapEditorPanel.cpp  TilemapEditorPanel.h  ViewportPanel.cpp  ViewportPanel.h
engine/assets/: CMakeLists.txt
engine/assets/include/ember/assets/: AssetDatabase.h  AssetHandle.h  AssetManager.h  AudioClip.h  AudioSystem.h  DefaultLoaders.h  FileWatcher.h  FontAsset.h  HotReload.h  IAssetLoader.h  ImportSettings.h  Prefab.h  Shader.h  Texture2D.h  ThreadPool.h
engine/assets/include/ember/assets/loaders/: AudioClipLoader.h  FontLoader.h  PrefabLoader.h  ShaderLoader.h  Texture2DLoader.h
engine/assets/loaders/: AudioClipLoader.cpp  DefaultLoaders.cpp  FontAsset.cpp  FontLoader.cpp  PrefabLoader.cpp  ShaderLoader.cpp  Texture2DLoader.cpp  miniaudio_impl.cpp  stb_impl.cpp
engine/assets/src/: AssetDatabase.cpp  AssetManager.cpp  FileWatcher.cpp  HotReload.cpp  ImportSettings.cpp
engine/audio/: CMakeLists.txt
engine/audio/include/ember/audio/: Audio.h  AudioEngine.h
engine/audio/src/: Audio.cpp  AudioEngine.cpp
engine/core/: CMakeLists.txt
engine/core/include/ember/core/: Arena.h  Assert.h  Core.h  Log.h  Pool.h  Profiler.h  Result.h  StringHash.h  Types.h  UUID.h
engine/core/src/: Arena.cpp  Assert.cpp  Log.cpp  Profiler.cpp  UUID.cpp
engine/ecs/: CMakeLists.txt
engine/ecs/include/ember/ecs/: ComponentRegistry.h  Components.h  Entity.h  Reflect.h  SystemScheduler.h  World.h
engine/ecs/src/: ComponentRegistry.cpp  Components.cpp  World.cpp
engine/events/: CMakeLists.txt
engine/events/include/ember/events/: EventBus.h  Events.h  Signal.h
engine/events/src/: EventBus.cpp
engine/input/: CMakeLists.txt
engine/input/include/ember/input/: Input.h  InputAction.h  InputManager.h  Keys.h
engine/input/src/: InputManager.cpp
engine/physics2d/: CMakeLists.txt
engine/physics2d/include/ember/physics2d/: Colliders2D.h  Physics2DComponents.h  Physics2DSystem.h  RigidBody2D.h
engine/physics2d/src/: Physics2DComponents.cpp  Physics2DSystem.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/ember/platform/: Event.h  FileSystem.h  Timer.h  Window.h
engine/platform/src/: FileSystem.cpp  Timer.cpp  Window.cpp
engine/renderer/2d/: CMakeLists.txt
engine/renderer/2d/include/ember/renderer/: Components2D.h  DebugDraw.h  FontAsset.h  ParticleEmitter.h  ParticleSystem.h  RenderComponents.h  Renderer2D.h  SpriteAnimation.h  SpriteAnimationClipLoader.h  SpriteAnimationSystem.h  SpriteRenderSystem.h  TextureAtlas.h  Tilemap.h  TilemapLoader.h  TilemapRenderSystem.h  (+3 more)
engine/renderer/2d/loaders/: FontAsset.cpp  Texture2DLoader.cpp  Texture2DLoader.h
engine/renderer/2d/src/: DebugDraw.cpp  ParticleSystem.cpp  Renderer2D.cpp  SpriteAnimationClipLoader.cpp  SpriteAnimationSystem.cpp  TilemapLoader.cpp  TilemapRenderSystem.cpp  UISystem.cpp
engine/renderer/2d/systems/: RenderComponentSerialization.cpp  SpriteRenderSystem.cpp  SpriteRenderSystem.h
engine/renderer/api/: CMakeLists.txt
engine/renderer/api/opengl/include/: OpenGLBuffer.h  OpenGLFramebuffer.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLVertexArray.h
engine/renderer/api/opengl/src/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLVertexArray.cpp
engine/renderer/api/src/: RHILayout.cpp  ShaderLibrary.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/ember/scene/: PrefabInstance.h  Scene.h  SceneManager.h  TransformSystem.h
engine/scene/src/: Scene.cpp  SceneManager.cpp
engine/scene/systems/: TransformSystem.cpp  TransformSystem.h
engine/scripting/: CMakeLists.txt
engine/scripting/include/ember/scripting/: RegisterScript.h  ScriptComponent.h  ScriptRegistry.h  ScriptSystem.h
engine/scripting/src/: ScriptComponent.cpp  ScriptRegistry.cpp  ScriptSystem.cpp
engine/serialization/: CMakeLists.txt
engine/serialization/include/ember/serialization/: AssetResolver.h  ComponentSerialization.h  SceneSerialization.h  YAMLSerializer.h
engine/serialization/src/: AssetResolver.cpp  SceneSerialization.cpp  SerializationDetail.h  YAMLDeserializer.cpp  YAMLSerializer.cpp
sandbox/: CMakeLists.txt  game2d.cpp  main.cpp
sandbox/scripts/: CameraFollow.h  Lifetime.h  PlayerController.h  Scripts.cpp  Spinner.h
tests/: CMakeLists.txt
tests/assets/: TestAssetManager.cpp
tests/audio/: TestAudioEngine.cpp
tests/core/: TestArena.cpp  TestLog.cpp  TestPool.cpp  TestStringHash.cpp  TestUUID.cpp
tests/ecs/: TestPerf.cpp  TestReflection.cpp  TestScheduler.cpp  TestWorld.cpp
tests/editor/: TestCommandHistory.cpp  TestComposite.cpp  TestEditorSettings.cpp  TestGizmo.cpp  TestImportSettings.cpp  TestInspectorModel.cpp  TestPicking.cpp  TestProfiler.cpp  TestSceneCommands.cpp  TestSelection.cpp  TestTilemapEdit.cpp
tests/events/: TestEventBus.cpp  TestSignal.cpp
tests/input/: TestInputState.cpp
tests/physics2d/: TestCollision2D.cpp  TestCollisionEvents.cpp  TestRigidBody2D.cpp
tests/platform/: TestFileSystem.cpp  TestTimer.cpp
tests/renderer/: TestCamera.cpp  TestParticles.cpp  TestRenderer2D.cpp  TestSpriteAnimation.cpp  TestTilemap.cpp  TestUI.cpp
tests/scene/: TestHierarchy.cpp
tests/scripting/: TestScriptAssets.cpp  TestScriptLifecycle.cpp  TestScriptSerialization.cpp
tests/serialization/: TestSceneSerialization.cpp
(+39 files in other folders)
